[tool.poetry]
name = "aioworker"
version = "0.1.0"
description = "Python async worker"
authors = [
    "Marcos Schroh <schrohm@gmail.com>",
    "Santiago Fraire Willemoës <santiwilly@gmail.com>"
]
license = "MIT"
keywords = ["aioworker", "kafka", "streaming", "async"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
aiotools = "^0.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"
mypy = "^0.761"
aiokafka = "^0.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
